# pyroll-sparling-spreading

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: sparling_spreading.py
pyroll/sparling_spreading/: __init__.py  hookimpls.py  hookspecs.py
tests/: test_solve.py  test_solve3.py  test_solve_pillar.py
